// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test CatalogGenreItem component First CatalogGenreItem component is created and rendered correctly 1`] = `
<li
  className="catalog__genres-item catalog__genres-item--active"
>
  <a
    className="catalog__genres-link"
    href="#"
    onClick={[Function]}
  >
    All genres
  </a>
</li>
`;

exports[`Test CatalogGenreItem component Second CatalogGenreItem component is created and rendered correctly 1`] = `
<li
  className="catalog__genres-item"
>
  <a
    className="catalog__genres-link"
    href="#"
    onClick={[Function]}
  >
    Comedies
  </a>
</li>
`;
